--- a/app/src/main/res/drawable/button_partner_shape.xml
+++ b/app/src/main/res/drawable/button_partner_shape.xml
@@ -12,7 +12,8 @@
     <solid android:color="#FFFFFF" />
 
     <stroke
-        android:width="1dp"
+        android:layout_width="fill_parent"
+        android:layout_weight="4"
         android:color="#222222" />
 
 </shape>
