--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -5,85 +5,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.hostseven.veocrm.Main2Activity"
-    android:background="#5fff8c">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
-        android:id="@+id/relativeLayout"
-        android:background="@drawable/layout_shape">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Día 1"
-            android:id="@+id/dayOneButton"
-            android:background="@drawable/button_partner_shape"
-            android:textSize="25dp"
-            android:onClick="getDayOne"
-            android:textColor="#733a90"
-            android:layout_below="@+id/textView7"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="52dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Día 2"
-            android:id="@+id/dayTwoButton"
-            android:background="@drawable/button_partner_shape"
-            android:textSize="25dp"
-            android:onClick="getDayTwo"
-            android:textColor="#733a90"
-            android:layout_below="@+id/dayOneButton"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Día 3"
-            android:id="@+id/dayThreeButton"
-            android:background="@drawable/button_partner_shape"
-            android:textSize="25dp"
-            android:onClick="getDayThree"
-            android:textColor="#733a90"
-            android:layout_below="@+id/dayTwoButton"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Días de la rutina"
-            android:id="@+id/textView7"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:textColor="#047633"
-            android:textStyle="bold"
-            android:typeface="sans" />
-
-    </RelativeLayout>
+    android:background="#336633">
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignBottom="@+id/relativeLayout"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="334dp"
-        android:background="@drawable/layout_shape">
+        android:background="@drawable/layout_shape"
+        android:id="@+id/tableLayout">
 
         <TableRow
             android:layout_width="match_parent"
@@ -175,5 +106,26 @@
                 android:layout_column="4" />
         </TableRow>
     </TableLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/tableLayout"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="209dp"
+        android:background="@drawable/layout_shape"
+        android:id="@+id/partners_buttons">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="&apos;Días de la rutina"
+            android:id="@+id/textView7"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 
 </RelativeLayout>
