--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.hostseven.veocrm.Main3Activity"
-    android:background="#5fff8c">
+    android:background="#336633">
 
 
     <TableLayout
