--- a/app/src/main/res/drawable/button_partner_shape.xml
+++ b/app/src/main/res/drawable/button_partner_shape.xml
@@ -5,15 +5,15 @@
     <corners
         android:bottomLeftRadius="7dp"
         android:bottomRightRadius="7dp"
-        android:radius="0.1dp"
+        android:radius="14dp"
         android:topLeftRadius="7dp"
-        android:topRightRadius="7dp" />
+        android:topRightRadius="7dp"
+         />
 
     <solid android:color="#FFFFFF" />
 
     <stroke
-        android:layout_width="fill_parent"
-        android:layout_weight="4"
+        android:width="2dp"
         android:color="#222222" />
 
 </shape>
