--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -113,21 +113,12 @@
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/listView2"
-            android:layout_alignBottom="@+id/listView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginBottom="174dp" />
-
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/listView"
             android:background="#fff"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="65dp"
+            android:layout_marginTop="39dp"
             android:layout_above="@+id/button2" />
 
         <Button
@@ -141,10 +132,58 @@
             android:background="@drawable/button_shape"
             android:onClick="backButton" />
 
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="195dp"
+            android:layout_alignBottom="@+id/listView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerHorizontal="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Grupo"
+                android:id="@+id/textView10"
+                android:layout_margin="5dp"
+                android:textSize="21dp"
+                android:textColor="#222222" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Ejercicio"
+                android:id="@+id/textView11"
+                android:layout_margin="5dp"
+                android:textSize="21dp"
+                android:textColor="#222222" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Series"
+                android:id="@+id/textView12"
+                android:layout_margin="5dp"
+                android:textSize="21dp"
+                android:textColor="#222222" />
+
+            <TextView
+                android:layout_width="134dp"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Repeticiones"
+                android:id="@+id/textView13"
+                android:layout_margin="5dp"
+                android:textSize="21dp"
+                android:textColor="#222222" />
+        </TableRow>
+
 
     </RelativeLayout>
-
-
 
 
 </RelativeLayout>
